Fixed About page layout issue

--- a/beta/stylesheet.css
+++ b/beta/stylesheet.css
@@ -178,7 +178,7 @@ body {
 }
 .heading {
     margin-top: 3rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Lato;
     background: -webkit-gradient(linear,left top,right top,from(#42C1C9),to(#2F9FA7));
     background: linear-gradient(to right,#42C1C9,#2F9FA7);
     -webkit-background-clip: text;
